--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".main.SuggestionActivity">
 
         </activity>
+        <activity android:name=".mine.ChartActivity"/>
     </application>
 
 </manifest>
