--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
 
         </activity>
         <activity android:name=".mine.ChartActivity"/>
+        <activity android:name=".main.CloseAlarmActivity"/>
+
+        <service android:name=".main.SleepTimeService"/>
     </application>
 
 </manifest>
