完善睡眠日志，包括点击显示详细，滑动删除

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".main.ReportActivity"/>
         <activity android:name=".mine.HelpItemActivity"/>
         <activity android:name=".main.AlarmActivity"/>
+        <activity android:name=".mine.RecordActivity"/>
 
         <service android:name=".main.SleepTimeService"/>
     </application>
