--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile files('libs/achartengine-1.1.0.jar')
+    compile files('libs/android-async-http-1.4.6.jar')
 }
