--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile files('libs/achartengine-1.1.0.jar')
     compile files('libs/android-async-http-1.4.6.jar')
+    compile files('libs/swiplist.jar')
 }
